<resources>
    <string name="app_name">GetFreshBooks</string>
    <string name="title">Title</string>
    <string name="bookid">Booking ID</string>
    <string name="categoryid">Category ID</string>
    <string name="isbn">ISBN</string>
    <string name="author">Author</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>

    <color name="white">#FFFFFF</color>
</resources>
